# nnfs

./: .gitignore  CMakeLists.txt  Dense.cpp  Dense.h  Dense.hpp  Neuron.cpp  Neuron.h  README.md  install.sh  plot.py  requirements.txt  runDense.cpp  runNeuron.cpp  testAll.cpp  testDense.cpp  testDense.h  testDense.hpp  testNeuron.cpp  testNeuron.h
include/: Dense.hpp  Neuron.hpp
python/: plot.py
src/: Dense.cpp  runDense.cpp
test/: testAll.cpp  testDense.hpp  testNeuron.hpp
